@startuml name
!theme blueprint

'========================
' Abstract Activity class
'========================
abstract class Activity {
    - String type
    - double emission
    + abstract void inputData(Scanner sc)
    + abstract void calculateEmission()
    + void displayResult()
    + double getEmission()
}

'========================
' Activity subclasses
'========================
class TravelActivity {
    - String mode
    - double distance
    - double local_factor
    + void inputData(Scanner sc)
    + void calculateEmission()
    + void displayResult()
}

class FoodActivity {
    - int numMeals
    + void inputData(Scanner sc)
    + void calculateEmission()
    + void displayResult()
}

class ElectricityActivity {
    - double units
    + void inputData(Scanner sc)
    + void calculateEmission()
    + double getUnits()
    + void displayResult()
}

Activity <|-- TravelActivity
Activity <|-- FoodActivity
Activity <|-- ElectricityActivity

'========================
' User class
'========================
class User {
    - String username
    - String password
    + User(String username, String password)
    + String getUsername()
    + String getPassword()
    + void call()
}

User "1" --> "*" Activity : performs

'========================
' Admin class
'========================
class Admin {
    - Map<String, User> Users
    - Map<String, List<Activity>> UserActivities
    + void registerUser(Scanner sc)
    + void loginUser(Scanner sc)
    + static void main(String[] args)
}

Admin "1" --> "*" User : manages
Admin "1" --> "*" Activity : tracks

'========================
' Database integration (future)
'========================
class DatabaseHandler {
    + void saveUser(User user)
    + User getUser(String username)
    + void saveActivity(String username, Activity activity)
    + List<Activity> getActivities(String username)
}

Admin --> DatabaseHandler
User --> DatabaseHandler

'========================
' JavaFX Screens (future)
'========================
class LoginScreen {
    + void show()
}

class RegisterScreen {
    + void show()
}

class DashboardScreen {
    + void show()
}

' Screens interact with User/Activity
LoginScreen --> User
RegisterScreen --> User
DashboardScreen --> User
DashboardScreen --> Activity
@enduml